--- a/app/ui/global.css
+++ b/app/ui/global.css
@@ -16,3 +16,7 @@ input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+*{
+    font-weight: 400;
+      font-style: normal;
+}
